# basic_screensharing_tool

./: Cargo.toml
src/: lib.rs
src/core/: anticheat.rs  discord.rs  mod.rs  uploading.rs
src/core/handle/: handle_context.rs  handle_info.rs  handle_manager.rs  mod.rs
src/core/overlay/: mod.rs  overlay_finder.rs  overlay_finder_params.rs  window_info.rs
src/core/process/: mod.rs  process.rs
